Updated Hero Section

--- a/Landing Page/Home.html
+++ b/Landing Page/Home.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="#">
+            <a href="/Landing Page/Home.html">
                 <img src="/Images/Logo1.png">
                 <p>JOURNEY<br><span>BEYOND</span></p>
             </a>
@@ -22,7 +22,7 @@
             <li><a href="">Features</a></li>
             <div class="links">
                 <li><button class="SignIn" onclick="location.href='/Sign In/SignIn.html'">Login</button></li>
-                <li><button class="SignUp">Sign Up</button></li>
+                <li><button class="SignUp" onclick="location.href='/Sign Up/UserSignIn.html'">Sign Up</button></li>
             </div>
         </ul>
     </header>
@@ -69,17 +69,42 @@
         </section>
 
         <section id = "destination" class="destination">
-            <h1> Destinations</h1>
+
             <div class="container">
-                <div class="top-container">
-                 <div class="left">
-                    <p>Nuwara Eliya</p>
-                 </div>
-                 <div class="right">
-                    <p>Sigiriya</p>
-                 </div>
+                <h1> Plan Your Journey With Us</h1>
+
+                <div class="top">
+                    <div class="left">
+                        <p>Nuwara Eliya</p>
+                    </div>
+                    <div class="right">
+                        <p>Ella</p>
+                    </div>
                 </div>
+
+                <div class="middle">
+                    <div class="left">
+                        <p>Kandy</p>
+                    </div>
+                    <div class="center">
+                        <p>Sigiriya</p>
+                    </div>
+                    <div class="right">
+                        <p>Galle</p>
+                    </div>
+                </div>
+
+                <div class="bottom">
+                    <div class="left">
+                        <p>Anuradhapura</p>
+                    </div>
+                    <div class="right">
+                        <p>Polonnaruwa</p>
+                    </div>
+                </div>
+
             </div>
+
         </section>
 
 
